2007-12-27  Torsten Rahn  <rahn@kde.org>

    - Save Projection in Qt interface
    - Update Projection ComboBox accordingly
    - Partially fix dateline issue with Bounding Box
    - Fix area visibility mapped to Legend

2007-12-25  Torsten Rahn  <rahn@kde.org>

    * src/lib/MeasureTool.{cpp, h}:
    * src/lib/MarbleWidget.cpp:

    More ViewParam-ization.

2007-12-25  Torsten Rahn  <rahn@kde.org>

	* VectorMap.{cpp,h}:
	* TextureColorizer.cpp:
	* VectorComposer.cpp:

	More ViewParam-ization.

2007-12-25  Torsten Rahn  <rahn@kde.org>

	* Fix coordinate system 
          ( North is + and South is - , West is - and East is +
            in the internal radian based coordinate system now)
	* More usage of centerCoordinates(lon, lat);
	* Speed-ups in flat projection code
	* code cleanup, better naming

2007-12-15  Inge Wallin  <inge@lysator.liu.se>

	Fix more warnings
	* src/lib/gps/Track.cpp,
	src/lib/gps/Gpslayer.h,
	src/lib/geodata/data/GeoDataFeature.cpp,
	src/lib/GridMap.cpp: Fix warnings
	
	Fix unnecessary warnings:
	* MarbleWidget.cpp,
	TileCreator.cpp,
	AbstractLayer/AbstractLayerData.h,
	AbstractLayer/AbstractLayerContainer.cpp,
	AbstractLayer/AbstractLayerData.cpp,
	TileLoader.cpp,
	PlaceMarkLayout.cpp,
	XmlHandler.cpp,
	PlaceMarkManager.cpp,
	FileViewModel.cpp,
	TextureColorizer.cpp,
	geodata/data/GeoDataIconStyle.h,
	geodata/data/GeoDataPoint.cpp,
	geodata/data/GeoDataFeature.cpp,
	geodata/data/GeoDataPoint.h,
	geodata/data/GeoDataLabelStyle.cpp,
	gps/Route.cpp,
	gps/RouteContainer.cpp,
	gps/Track.cpp,
	gps/RouteContainer.h,
	gps/GpsTracking.cpp,
	gps/TrackContainer.h,
	gps/WaypointContainer.cpp,
	gps/Waypoint.h,
	gps/GpxFileModel.cpp,
	gps/WaypointContainer.h:  Fix most warnings.
	
	Bugfix: 
	* src/lib/geodata/data/GeoDataIconStyle.cpp (setHotSpot): use (x, y)
	instead of (x, x):
	
	Mini fixes
	* src/lib/MarbleWidget.h: Fix apidox typo.
	* src/lib/geodata/data/GeoDataIconStyle.h: Add ingwa as copyright holder

2007-13-11  Torsten Rahn  <rahn@kde.org>
